--- a/Dispatch optimization.ipynb
+++ b/Dispatch optimization.ipynb
@@ -5,13 +5,9 @@
    "metadata": {},
    "source": [
     "# Battery dispatch optimization\n",
-    "The goal of this exercise is to optimize the charge/discharge behavior of a battery system performing energy arbitrage in the NYISO market. The model objective is to maximize revenue over a year and the project objective is to gain insights into market dynamics and expected system behavior. We have hourly LBMP data for the entire year (taken from 2017), which we assume is accurate with perfect foresight.\n",
+    "The goal of this exercise is to optimize the charge/discharge behavior of a battery system performing energy arbitrage in the Spanish market. The model objective is to maximize profit to cost ratio over a year and the project objective is to gain insights into market dynamics and expected system behavior. We have hourly electricity price data and power output from the solar plant for the entire year (taken from 2020 and 2023), which we assume is accurate with perfect foresight.\n",
     "\n",
-    "The battery system has maximum storage capacity of 200 kWh and a power rating of 100 kW (charge and discharge). Round-trip AC-AC efficiency is 85%. The maximum daily discharge throughput is constrained to 200 kWh within a 24-hour period.\n",
-    "\n",
-    "Because we are using this model to understand the market dynamics in the NYISO NYC hub, it's fine to run the entire year optimzation at once rather than running in discrete periods. When actually operating the battery we would need to use price forecasts that would become less accurate over time. In that situation a series of multi-day optimizations would be used. The first window would assume a starting charge state (I'm using half of the manimum charge in this exercise), and might predict 3-4 days. The first 24-hours would be kept and used as a constraint in the next period. For the second period, a window of 4-5 days would be used -- values from the first day would be used to constrain hours 0-23, and the optimization would again use a look-ahead of 2-3 days to ensure accurate model behavior. This cycle (keep 24 hours and use then as a constrain in the next iteration) would then continue through the end of the year.\n",
-    "\n",
-    "I've elected to stick with the simplier approach here because it is easier/faster to code and should provide the same optimized dispatch results. Actually optimizing dispatch for a battery system would require forecasting prices. Because this is a much simpler exercise a simpler model that takes less time to build is fine."
+    "The battery system has maximum storage capacity of 200 MWh and a power rating of 50 MW (charge and discharge). Round-trip AC-AC efficiency is 85%. The maximum daily discharge throughput is constrained to 200 MWh within a 24-hour period."
    ]
   },
   {
@@ -127460,9 +127456,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:battery_model]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-battery_model-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127474,7 +127470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
