--- a/Dispatch optimization.ipynb
+++ b/Dispatch optimization.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "## Read data\n",
-    "Functions to read data and run the optimization model are provided in scripts in the `src` folder. The `read_all_nyc` function combines data from daily .csv files, filters out all non-NYC node prices, and renames the columns to snake case."
+    "Functions to read data and run the optimization model are provided in scripts in the `src` folder. "
    ]
   },
   {
@@ -46,96 +46,6 @@
     "data_path = 'PowerOutput'\n",
     "\n",
     "df = read_excel_to_df(data_path=data_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time_stamp</th>\n",
-       "      <th>name</th>\n",
-       "      <th>lbmp</th>\n",
-       "      <th>hour</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-01-01 00:00:00</td>\n",
-       "      <td>N.Y.C.</td>\n",
-       "      <td>33.60</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-01-01 01:00:00</td>\n",
-       "      <td>N.Y.C.</td>\n",
-       "      <td>32.05</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01-01 02:00:00</td>\n",
-       "      <td>N.Y.C.</td>\n",
-       "      <td>29.23</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-01-01 03:00:00</td>\n",
-       "      <td>N.Y.C.</td>\n",
-       "      <td>25.02</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-01-01 04:00:00</td>\n",
-       "      <td>N.Y.C.</td>\n",
-       "      <td>26.94</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           time_stamp    name   lbmp  hour\n",
-       "0 2017-01-01 00:00:00  N.Y.C.  33.60     0\n",
-       "1 2017-01-01 01:00:00  N.Y.C.  32.05     1\n",
-       "2 2017-01-01 02:00:00  N.Y.C.  29.23     2\n",
-       "3 2017-01-01 03:00:00  N.Y.C.  25.02     3\n",
-       "4 2017-01-01 04:00:00  N.Y.C.  26.94     4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   },
   {
@@ -151,7 +61,7 @@
     "- $S_t$: storage at time $t$\n",
     "- Eff ($\\eta$) (85%): efficiency \n",
     "- $D_{max}$ (200 kWh): max discharge within a 24 hour period\n",
-    "- $P_t$: LBMP at time $t$\n",
+    "- $P_t$: price at time $t$\n",
     "\n",
     "**Decision variables**\n",
     "- $E^{in}_t$: energy delivered to the battery at time $t$\n",
@@ -173,7 +83,7 @@
    "metadata": {},
    "source": [
     "## Run the optimization model\n",
-    "The `optimize_year` function takes in the LBMP data from our new dataframe and returns the optimization results in a dataframe."
+    "The `optimize_year` function takes in the price data from our new dataframe and returns the optimization results in a dataframe."
    ]
   },
   {
@@ -314,7 +224,7 @@
     "    - Annual charging costs\n",
     "    - Annual discharged throughput\n",
     "- Plots\n",
-    "    - Hourly dispatch and LBMP for the most profitable week (assuming calendar week)\n",
+    "    - Hourly dispatch and price for the most profitable week (assuming calendar week)\n",
     "    - Total profit for each month"
    ]
   },
@@ -385,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After dropping the first day of 2017 (which was a Sunday, and part of the 52nd week of 2016), the most profitable week was the last week of the year."
+    "The most profitable week was calculated."
    ]
   },
   {
@@ -412,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Including both the dispatch and hourly LBMP in a single plot is difficult because their values have different scales (dispatch is capped at 100 kWh while LBMP in week 52 goes over \\\\$200/kWh). A dual y-axis plot can be difficult to read, so I've decided to show one plot on top of the other. The plot of LBMP uses color to encode dispatch, which helps to make the whole thing easier to interprete."
+    "Including both the dispatch and hourly price in a single plot is difficult because their values have different scales. A dual y-axis plot can be difficult to read, so I've decided to show one plot on top of the other. The plot of price uses color to encode dispatch, which helps to make the whole thing easier to interprete."
    ]
   },
   {
